# hcl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  TODO.md  build.rs
.github/workflows/: benchmarks.yml  bloat-check-pr-comment.yml  bloat-check.yml  ci.yml  codeql.yml  committed.yml  mark-stale.yml  release.yml  typos.yml  zizmor.yml
benches/: parsing.rs
src/: cli.rs  generators.rs  io_handler.rs  json_gen.rs  layout.rs  lib.rs  main.rs  parser.rs  postprocessor.rs  subcommand_parser.rs  types.rs
tests/: main_integration.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__bash_generator_compat_snapshot.snap  snapshot_tests__bash_generator_snapshot.snap  snapshot_tests__elvish_generator_snapshot.snap  snapshot_tests__fish_generator_snapshot.snap  snapshot_tests__nushell_generator_snapshot.snap  snapshot_tests__parse_docker_help_snapshot.snap  snapshot_tests__parse_ls_help_snapshot.snap  snapshot_tests__zsh_generator_with_descriptions_snapshot.snap
