[package]
name = "hcl"
version = "0.1.0"
edition = "2024"
description = "Help to Options - Parse help or manpage texts and generate shell completion scripts"
documentation = "https://github.com/MuntasirSZN/hcl"
readme = "README.md"
repository = "https://github.com/MuntasirSZN/hcl"
license = "MIT"
keywords = ["cli", "completion", "help", "manpage", "parser", "shell"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
lazy_static = "1.5"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "4.1" }
insta = { version = "1.44", features = ["redactions", "yaml"] }
proptest = "1.9"
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.23"

[build-dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap_mangen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
