[package]
name = "d2o"
version = "0.1.0"
edition = "2024"
description = "Help to Options - Parse help or manpage texts and generate shell completion scripts"
documentation = "https://github.com/MuntasirSZN/d2o"
readme = "README.md"
repository = "https://github.com/MuntasirSZN/d2o"
license = "MIT"
keywords = ["cli", "completion", "help", "manpage", "shell"]
categories = ["command-line-utilities", "parsing"]
build = "build.rs"

[[bench]]
harness = false
name = "parsing"

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
argfile = "0.2.1"
bstr = "1.12"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap-verbosity-flag = { version = "3.0", default-features = false, features = [
  "tracing"
] }
directories = "6.0"
ecow = { version = "0.2", features = ["serde"] }
foldhash = "0.2.0"
memchr = "2.7"
rayon = "1.11"
regex = "1.12"
scc = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shadow-rs = { version = "1.5", default-features = false }
tokio = { version = "1.48", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.1"
divan = { package = "codspeed-divan-compat", version = "4.1" }
insta = { version = "1.45", features = ["redactions", "yaml"] }
predicates = "3.1"
proptest = "1.9"
tempfile = "3.24"
tokio = { version = "1.48", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread"
] }

[build-dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap_mangen = "0.2"
clap-verbosity-flag = { version = "3.0", default-features = false, features = [
  "tracing"
] }
shadow-rs = "1.5"

[target.'cfg(all(target_os = "linux", not(target_arch = "arm"), not(target_arch = "aarch64")))'.dependencies]
mimalloc-safe = { version = "0.1.55", features = [
  "extended",
  "local_dynamic_tls",
  "skip_collect_on_exit"
] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
mimalloc-safe = { version = "0.1.55", features = [
  "extended",
  "local_dynamic_tls",
  "no_opt_arch",
  "skip_collect_on_exit"
] }

[target.'cfg(not(any(target_os = "linux", target_os = "freebsd", target_arch = "arm")))'.dependencies]
mimalloc-safe = { version = "0.1.55", features = [
  "extended",
  "skip_collect_on_exit"
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
